no tengo tiempo
para desconocer

--- a/FlashBox/index.html
+++ b/FlashBox/index.html
@@ -54,7 +54,7 @@
         <li>
             <div class="inform2">
                 <p>
-                    hola matitest
+                    Hola matitest
                 </p>
             </div>
         </li>
